---
source: spade-tests/src/linear_check.rs
---
struct A {
    x: inv bool,
}
entity x(a: A) -> (inv bool, inv bool) {
    (a.x, a.x)
}


error: Use of consumed resource
  ┌─ testinput:5:11
  │
5 │     (a.x, a.x)
  │      ---  ^^^ Use of consumed resource
  │      │     
  │      Previously used here
